k8s/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: booking
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
